Configuracion de seguridad y otros ajustes