@@ -1,10 +1,15 @@
 package com.softhugordc.taskmanagerappv1.service;
 
 import com.softhugordc.taskmanagerappv1.domain.TaskEntity;
-import com.softhugordc.taskmanagerappv1.dto.response.TaskSummaryResponseDTO;
+import com.softhugordc.taskmanagerappv1.domain.UserEntity;
+import com.softhugordc.taskmanagerappv1.dto.request.TaskRequestDTO;
+import com.softhugordc.taskmanagerappv1.dto.response.TaskResponseDTO;
+import com.softhugordc.taskmanagerappv1.dto.response.UserResponseDTO;
 import com.softhugordc.taskmanagerappv1.exception.DatabaseOperationException;
 import com.softhugordc.taskmanagerappv1.exception.TaskNotFoundException;
+import com.softhugordc.taskmanagerappv1.exception.UserNotFoundException;
 import com.softhugordc.taskmanagerappv1.repository.ITaskRepository;
+import com.softhugordc.taskmanagerappv1.repository.IUserRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.dao.DataAccessException;
@@ -13,7 +18,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 //Servicio para hacer operaciones con tareas
 @Service
@@ -21,70 +25,91 @@ import java.util.stream.Collectors;
 public class TaskServiceImpl implements ITaskService {
 
     private final ITaskRepository taskRepository;
+    private final IUserRepository userRepository;
 
-    //Buscar una tarea por su id
     @Override
     public Optional<TaskEntity> findById(String id) {
         Optional<TaskEntity> taskEntity = taskRepository.findById(id);
         if (taskEntity.isEmpty()) {
-            throw new TaskNotFoundException("No existe una tarea con el id especificado", HttpStatus.NOT_FOUND);
+            throw new TaskNotFoundException(String.format("El id %s no corresponde a ninguna tarea", id), HttpStatus.NOT_FOUND);
         }
         return taskEntity;
     }
 
-    //Comprobar si una tarea existe
+    //Buscar todas las tareas por el id de usuario
     @Override
-    public boolean existsById(String id) {
-        return taskRepository.existsById(id);
-    }
-
-    //Buscar todas las tares por el id de un usuario
-    @Override
-    public List<TaskEntity> findByIdUser(String idUser) {
-        List<TaskEntity> taskEntities = taskRepository.findByIdUser(idUser);
+    public List<TaskEntity> findAllByIdUser(String idUser) {
+        List<TaskEntity> taskEntities = taskRepository.findAllByIdUser(idUser);
         if (taskEntities.isEmpty()) {
-            throw new TaskNotFoundException("No existen tareas vinculadas al idUser especificado", HttpStatus.NOT_FOUND);
+            throw new TaskNotFoundException(String.format("El id %s no tiene tareas vinculadas", idUser), HttpStatus.NOT_FOUND);
         }
         return taskEntities;
     }
 
-    //Buscar todas las tareas, devuelve una lista con representaciones de TaskEntity
+    //Buscar todas las tareas por el id de usuario, devuelve TaskResponseDTO
     @Override
-    public List<TaskSummaryResponseDTO> findAllTasks() {
-        List<TaskEntity> taskEntities = taskRepository.findAll();
-        return taskEntities.stream()
-                .map(task -> TaskSummaryResponseDTO.builder()
-                        .id(task.getId())
-                        .title(task.getTitle())
-                        .description(task.getDescription())
+    public List<TaskResponseDTO> findAllTasksByIdUser(String idUser) {
+        return taskRepository.findAllByIdUser(idUser).stream()
+                .map(taskEntity -> TaskResponseDTO.builder()
+                        .id(taskEntity.getId())
+                        .title(taskEntity.getTitle())
+                        .description(taskEntity.getDescription())
+                        .user(UserResponseDTO.builder()
+                                .id(taskEntity.getUser().getId())
+                                .name(taskEntity.getUser().getName())
+                                .lastName(taskEntity.getUser().getLastName())
+                                .email(taskEntity.getUser().getEmail())
+                                .build())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    //Crear una tarea, devuelve una TaskEntity
+    //Buscar todas las tareas
+    @Override
+    public List<TaskEntity> findAll() {
+        return taskRepository.findAll();
+    }
+
+    //Guardar una tarea
     @Override
     @Transactional
-    public TaskEntity save(TaskEntity taskEntity) {
+    public TaskEntity save(TaskEntity taskEntity, String idUser) {
+        UserEntity userEntity = userRepository.findById(idUser)
+                .orElseThrow(() -> new UserNotFoundException(String.format("El id %s no corresponde a ningun usuario", idUser), HttpStatus.NOT_FOUND));
+        taskEntity.setUser(userEntity);
         try {
             return taskRepository.save(taskEntity);
         } catch (DataAccessException e) {
-            throw new DatabaseOperationException("Error al intentar guardar la tarea");
+            throw new DatabaseOperationException(String.format("Error al intentar guardar la tarea del usuario con id %s", idUser));
         }
     }
 
-    //Crear una tarea, devuelve una representacion de TaskEntity
+    //Guardar una tarea, pero con otra respuesta
     @Override
-    @Transactional
-    public TaskSummaryResponseDTO saveTask(TaskEntity taskEntity) {
+    public TaskResponseDTO save(TaskRequestDTO taskRequestDTO, String idUser) {
+        UserEntity userEntity = userRepository.findById(idUser)
+                .orElseThrow(() -> new UserNotFoundException(String.format("El id %s no corresponde a ningun usuario", idUser), HttpStatus.NOT_FOUND));
+        TaskEntity taskEntity = TaskEntity.builder()
+                .title(taskRequestDTO.getTitle())
+                .description(taskRequestDTO.getDescription())
+                .user(userEntity)
+                .build();
         try {
             TaskEntity savedTaskEntity = taskRepository.save(taskEntity);
-            return TaskSummaryResponseDTO.builder()
+            UserResponseDTO userResponseDTO = UserResponseDTO.builder()
+                    .id(savedTaskEntity.getUser().getId())
+                    .name(savedTaskEntity.getUser().getName())
+                    .lastName(savedTaskEntity.getUser().getLastName())
+                    .email(savedTaskEntity.getUser().getEmail())
+                    .build();
+            return TaskResponseDTO.builder()
                     .id(savedTaskEntity.getId())
                     .title(savedTaskEntity.getTitle())
                     .description(savedTaskEntity.getDescription())
+                    .user(userResponseDTO)
                     .build();
         } catch (DataAccessException e) {
-            throw new DatabaseOperationException("Error al intentar guardar la tarea");
+            throw new DatabaseOperationException(String.format("Error al intentar guardar la tarea del usuario con id %s", idUser));
         }
     }
 
@@ -93,12 +118,13 @@ public class TaskServiceImpl implements ITaskService {
     @Transactional
     public void deleteTaskById(String id) {
         if (!taskRepository.existsById(id)) {
-            throw new TaskNotFoundException("No existe una tarea con el id especificado", HttpStatus.NOT_FOUND);
+            throw new TaskNotFoundException(String.format("El id %s no corresponde a ninguna tarea", id), HttpStatus.NOT_FOUND);
         }
         try {
             taskRepository.deleteById(id);
         } catch (DataAccessException e) {
-            throw new DatabaseOperationException("Error al intentar eliminar la tarea con el id especificado");
+            throw new DatabaseOperationException(String.format("Error al intentar eliminar la tarea con el id %s", id));
         }
     }
+
 }
